Fix Java 11 compatibility issue in DashboardTest